# hedgehog-talk

./: hie.yaml  integrated.diff  mini.cabal  reportQC.diff  shrinking.diff
csrc/: circular.c  circular.h
src/: circularbuffer.hs  demonstration.hs  integrated.hs  real.hs  report.hs  reportteeny.hs  rose.hs  shrinking.hs  state-machine.hs  statemachine.hs  techtalk.hs  teeny.hs  tinyQC.hs
test/: Test.hs
test/Test/CircularBuffer/: Hedgehog.hs  Report.hs
