cabal-version:       >=1.10
name:                mini
version:             0.1.0.0
license-file:        LICENSE
author:              Huw Campbell
maintainer:          huw.campbell@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

extra-source-files:
    csrc/*.h
    csrc/*.c

library
  build-depends:       base >=4.13 && <4.14
                     , containers
                     , random
                     , hedgehog
                     , ghc-prim
                     , transformers
                     , resourcet
                     , mmorph

  default-language:    Haskell2010

  hs-source-dirs:
                       src
  includes:
                       csrc/circular.h
  c-sources:
                       csrc/circular.c

  exposed-modules:
                       CircularBuffer
                       Rose

                       Report
                       StateMachine
                       Integrated
                       Shrinking
                       Tiny

executable main
  ghc-options:
                    -Wall -threaded -O2

  main-is:
                    main/main.hs

  build-depends:
                      base
                    , mini


test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  build-depends:
      mini
    , hedgehog
    , hedgehog-quickcheck
    , base

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test
